Fix z-index navBar mobile

--- a/src/styles/NavbarMobile.css
+++ b/src/styles/NavbarMobile.css
@@ -10,6 +10,7 @@
     margin: 0;
     color: #fff;
     transition: 1s;
+    z-index: 30;
 }
 
 .menuMobileHidden{
